// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when providing a URL string 1`] = `
<DocumentFragment>
  <div
    class="relative md:-top-20 md:-mb-20 p-10 md:p-32 bg-scroll bg-cover bg-no-repeat flex justify-end"
  >
    <img
      alt=""
      src="https://via.placeholder.com/500x500"
    />
    <div
      class="flex flex-col justify-center w-1/2"
    />
    <div
      class="absolute inset-0 overflow-hidden"
    >
      <svg
        class="text-white overflow-visible absolute top-0 right-0 transform translate-x-1/4 -translate-y-2/4 lg:-translate-y-3/4
    "
        height="60vw"
        width="60vw"
      >
        <circle
          class="stroke-current"
          cx="30vw"
          cy="30vw"
          fill-opacity="0"
          opacity="0.1"
          r="30vw"
          stroke-width="20px"
        />
      </svg>
      <svg
        class="text-white overflow-visible absolute bottom-0 left-0 transform -translate-x-1/4 translate-y-2/4 lg:translate-y-3/4
    "
        height="68vw"
        width="68vw"
      >
        <circle
          class="stroke-current"
          cx="34vw"
          cy="34vw"
          fill-opacity="0"
          opacity="0.5"
          r="34vw"
          stroke-width="20px"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly when providing static image data 1`] = `
<DocumentFragment>
  <div
    class="relative md:-top-20 md:-mb-20 p-10 md:p-32 bg-scroll bg-cover bg-no-repeat flex justify-start"
  >
    <img
      alt=""
      src="[object Object]"
    />
    <div
      class="flex flex-col justify-center w-1/2"
    />
    <div
      class="absolute inset-0 overflow-hidden"
    >
      <svg
        class="text-white overflow-visible absolute top-0 right-0 transform translate-x-1/4 -translate-y-2/4 lg:-translate-y-3/4
    "
        height="60vw"
        width="60vw"
      >
        <circle
          class="stroke-current"
          cx="30vw"
          cy="30vw"
          fill-opacity="0"
          opacity="0.1"
          r="30vw"
          stroke-width="20px"
        />
      </svg>
      <svg
        class="text-white overflow-visible absolute bottom-0 left-0 transform -translate-x-1/4 translate-y-2/4 lg:translate-y-3/4
    "
        height="68vw"
        width="68vw"
      >
        <circle
          class="stroke-current"
          cx="34vw"
          cy="34vw"
          fill-opacity="0"
          opacity="0.5"
          r="34vw"
          stroke-width="20px"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
